apps/gluetun/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: downloads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8888  # HTTP proxy
            - containerPort: 8388  # Shadowsocks
      volumes:
        - name: gluetun-config
          persistentVolumeClaim:
            claimName: gluetun-config
